pyquest/ql/test/parsing/invalid/test002.ql
// Empty form without label
form {
}